# openclaw-skills

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
docs/: feishu-fields.md  next-step-plan.md  skill-spec.md
parser/: install.bat  start.bat  wechat_obsidian_config.json  wechat_to_obsidian.py
skills/: __init__.py
skills/aba_fetch/: README.md  __init__.py  config.example.json  main.py
skills/common/: __init__.py  utils.py
tests/: test_demo.py
